--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -4,7 +4,11 @@
         <title>Todo App - {{ title }}</title>
     </head>
     <body>
-        <h1> Todo App - {{ title }} </h1>
+        <h1>Todo App - {{ title }}</h1>
+        <p>
+            <a href="{{ url_for('home') }}">Home</a>
+            <a href="{{ url_for('create_task') }}">Add Task</a>
+        </p>
         {% block body %}
         {% endblock body %}
     </body>
