--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -7,7 +7,8 @@
         <p>
             Task ID: {{ task.id }}<br>
             Task Description: {{ task.description }}<br>
-            <a href="{{ url_for('update_task', id=task.id) }}">Update Task</a>
+            <a href="{{ url_for('update_task', id=task.id) }}">Edit</a>
+            <a href="{{ url_for('delete_task', id=task.id) }}">Delete</a>
         </p>    
     {% endif %}
     {% endfor %}
@@ -18,6 +19,8 @@
         <p>
             Task ID: {{ task.id }}<br>
             Task Description: {{ task.description }}<br>
+            <a href="{{ url_for('update_task', id=task.id) }}">Edit</a>
+            <a href="{{ url_for('delete_task', id=task.id) }}">Delete</a>
         </p>    
     {% endif %}
     {% endfor %}
